# xreflect

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt
examples/01_quick_start/: CMakeLists.txt  main.cpp
examples/02_fields_and_methods/: CMakeLists.txt  main.cpp
examples/03_properties/: CMakeLists.txt  main.cpp
examples/04_enum/: CMakeLists.txt  main.cpp
examples/05_inheritance/: CMakeLists.txt  main.cpp
examples/06_virtual_override/: CMakeLists.txt  main.cpp
examples/07_templates/: CMakeLists.txt  main.cpp
examples/08_fieldpath/: CMakeLists.txt  main.cpp
examples/09_containers/: CMakeLists.txt  main.cpp
examples/10_construction/: CMakeLists.txt  main.cpp
examples/11_modify/: CMakeLists.txt  main.cpp
examples/12_comprehensive/: CMakeLists.txt  main.cpp
examples/13_global_function/: CMakeLists.txt  main.cpp
examples/14_script_binding/: CApplication.cpp  CApplication.h  CMakeLists.txt  main.cpp  test.js  test.lua
examples/14_script_binding/js_binding/: CScriptJS.cpp  CScriptJS.h  CTypeJS.cpp  CTypeJS.h
examples/14_script_binding/lua_binding/: CScriptLua.cpp  CScriptLua.h  CTypeLua.cpp  CTypeLua.h
examples/benchmark/: CMakeLists.txt  main.cpp
examples/test_suite/: CMakeLists.txt  main.cpp
include/: CClass.h  CClass.inl  CField.h  CField.inl  CName.h  CReflection.h  Reflection.h  ReflectionBase.h  ReflectionMacro.h  ReflectionWrap.h  StaticTypeName.h  TClass.h  TemplateWrap.h  TypeParser.h
include/Template/: std.h
src/: CClass.cpp  CField.cpp  CName.cpp  CReflection.cpp  ReflectionHelp.cpp  ReflectionHelp.h
